added basic index page for about me

--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
         </a>
         <span class="stretch"></span>
     </div>
-    <div>
+    <div class="typewriter">
         <h1>Hi, my name is </br>
         Ryo Lambert
         </h1>
-        <div class="content">
-            <p>I'm an IT specialist, aspiring web developer, and digital creative!</p>
-        </div>
     </div>
+    <div>
+        <p>I'm an IT specialist, aspiring web developer, and digital creative!</p>
+    </div>
+
 
 
 </body>
