added basic index page for about me

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <a href="https://github.com/ryolambert">
-            <img src="profile-pic.png" link="https://github.com/ryolambert">
+            <img src="profile-pic.png" link="https://github.com/ryolambert"/>
         </a>
     </div>
     <div id="thumbs">
