added basic index page for about me

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </h1>
     </div>
     <div>
-        <p>I'm an IT specialist, aspiring web developer, and digital creative!</p>
+        <p>I'm an IT nerd, aspiring web developer, and digital creative!</p>
     </div>
 
 
