added basic index page for about me

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="profile-pic.png" link="https://github.com/ryolambert"/>
         </a>
     </div>
-    <div id="thumbs">
+    <div id="links">
         <a id="single_image1" href="https://github.com/ryolambert">
             <img src="github.png" alt="" />
         </a>
