--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
         </h1>
     </div>
     <div>
-        <p>I'm an IT nerd, aspiring web developer, and digital creative!</p>
+        <p>I'm an IT nerd, aspiring web developer, and digital creative!</b>
+			  When I'm not doing nerd things, I'm usually out carefully raising my rare, purple unicorns.</br>
+			  Though they require delicate care, they help me to manage my work stress and flow.
+        </p>
     </div>
 
 
