Added more text to about me.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <div>
         <p>I'm an IT nerd, aspiring web developer, and digital creative!</b>
 			  When I'm not doing nerd things, I'm usually out carefully raising my rare, purple unicorns.</br>
-			  Though they require delicate care, they help me to manage my work stress and flow.
+			  Though they require delicate care, they help me to manage my work stress and flow.</br>
+			  I highly recommend this as a wonderful hobby.
         </p>
     </div>
 
